added simple functionality

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+spring.datasource.url=jdbc:mysql://localhost:3306/cool
+spring.datasource.username=root
+spring.datasource.password=1234
+
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=validate
+
+jwt.secret=qweRTdlJfa352508lzcxkl$%jk3asf4aasrFA3234tasd
+jwt.expired=432000000
+
+
 
